--- a/JLogger6Test/JLogger6Test.csproj
+++ b/JLogger6Test/JLogger6Test.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="TestInfo.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
@@ -14,7 +18,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\JLogger6\JLogger6.csproj" />
-    <ProjectReference Include="..\JLogger\JLogger6.csproj" />
   </ItemGroup>
 
 </Project>
